--- a/src/sxshacker/sxshacker.vcproj
+++ b/src/sxshacker/sxshacker.vcproj
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)..\..\Bin\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)..\..\Obj\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			>
@@ -44,7 +44,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
 				DebugInformationFormat="4"
@@ -89,8 +89,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)..\..\Bin\$(ConfigurationName)"
+			IntermediateDirectory="$(SolutionDir)..\..\Obj\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -115,7 +115,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
 				WarningLevel="3"
@@ -171,6 +171,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\Main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\PEResource.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -191,7 +199,15 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\sxshacker.cpp"
+				RelativePath=".\SxSParser.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Util.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\WndLayout.cpp"
 				>
 			</File>
 		</Filter>
@@ -205,7 +221,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\LinkStatic.h"
+				>
+			</File>
+			<File
 				RelativePath=".\MainDlg.h"
+				>
+			</File>
+			<File
+				RelativePath=".\PEResource.h"
 				>
 			</File>
 			<File
@@ -217,11 +241,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\sxshacker.h"
+				RelativePath=".\SxSParser.h"
 				>
 			</File>
 			<File
 				RelativePath=".\targetver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Util.h"
+				>
+			</File>
+			<File
+				RelativePath=".\WndLayout.h"
 				>
 			</File>
 		</Filter>
